
bin_PROGRAMS = wxnwntreasure

wxnwntreasure_SOURCES = \
	wxNwnTreasure.cpp \
	wxNwnTreasure.h

AM_CPPFLAGS = $(WX_CPPFLAGS)
AM_CXXFLAGS = $(WX_CXXFLAGS_ONLY)
AM_LDFLAGS = $(WX_LIBS)

EXTRA_DIST = \
	down.xpm \
	encounter.xpm \
	exit.xpm \
	fileopen.xpm \
	gold.xpm \
	helpicon.xpm \
	new.xpm \
	none.xpm \
	save.xpm \
	table.xpm \
	tableprop.xpm \
	up.xpm

MAINTAINERCLEANFILES = \
	Makefile.in

