
bin_PROGRAMS = wxnwntreasure

wxnwntreasure_SOURCES = \
	TablePropDlg.cpp \
	TablePropDlg.h \
	wxNwnTreasure.cpp \
	wxNwnTreasure.h

AM_CPPFLAGS = $(WX_CPPFLAGS)
AM_CXXFLAGS = $(WX_CXXFLAGS_ONLY)
AM_LDFLAGS = $(WX_LIBS)

EXTRA_DIST = \
	after.xpm \
	down.xpm \
	encounter.xpm \
	exit.xpm \
	fileopen.xpm \
	gold.xpm \
	helpicon.xpm \
	new.xpm \
	none.xpm \
	prefs.xpm \
	prop.xpm \
	remove.xpm \
	save.xpm \
	save_as.xpm \
	saveas.xpm \
	table.xpm \
	tableprop.xpm \
	up.xpm

MAINTAINERCLEANFILES = \
	Makefile.in

